--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
     "css-loader": "^6.8.1",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.27.5",
     "html-webpack-plugin": "^5.5.3",
     "style-loader": "^3.3.3",
-    "webpack": "^5.4.0",
+    "webpack": "^5.88.1",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^4.15.1"
   },
